fix(background): set form-label color by --contrast-color

--- a/packages/web-styles/src/variables/components/_forms.scss
+++ b/packages/web-styles/src/variables/components/_forms.scss
@@ -11,7 +11,8 @@
 
 // Forms
 
-$label-margin-bottom: 0.5rem !default;
+$form-label-margin-bottom: 0.5rem !default;
+$form-label-color: rgba(var(--contrast-color-rgb), 0.8) !default;
 
 $input-padding-y: button.$input-btn-padding-y !default;
 $input-padding-x: button.$input-btn-padding-x !default;
